discussion/kv_engine/174165/174165_rev4_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-51168: Add duration snooze functions to ExecutorPools

We need to update the ExecutorPools to pass down durations rather
than doubles for snooze times to update the API everywhere.

Change-Id: I1be4fdedc87670c2bef1a1a421fae86cee3bf2da

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Ben Huddleston
Date: 2022-04-29 17:54:34.000000000
Message: 
Uploaded patch set 4.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-04-29 17:56:29.000000000
Message: 
Patch Set 4: Verified-1 Code-Review-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/17207/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/executor/snooze_time.cc:6:6: error: no type named "ostream" in namespace "std" [clang-diagnostic-error]
std::ostream& operator<<(std::ostream& os, const SnoozeTime& snoozeTime) {
     ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/executor/snooze_time.cc:6:31: error: no type named "ostream" in namespace "std" [clang-diagnostic-error]
std::ostream& operator<<(std::ostream& os, const SnoozeTime& snoozeTime) {
                              ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/executor/snooze_time.h:47:9: error: use of undeclared identifier "Expects" [clang-diagnostic-error]
        Expects(desiredSnoozeTime.count() > 0);
        ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/executor/snooze_time.h:99:6: error: no type named "ostream" in namespace "std" [clang-diagnostic-error]
std::ostream& operator<<(std::ostream& os, const SnoozeTime& snoozeTime);
     ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/executor/snooze_time.h:99:31: error: no type named "ostream" in namespace "std" [clang-diagnostic-error]
std::ostream& operator<<(std::ostream& os, const SnoozeTime& snoozeTime);
                              ^
/opt/gcc-10.2.0/lib/gcc/x86_64-pc-linux-gnu/10.2.0/../../../../include/c++/10.2.0/bits/basic_string.h:406:45: error: no member named "__max" in "__gnu_cxx::__numeric_traits<int>" [clang-diagnostic-error]
          return __gnu_cxx::__numeric_traits<int>::__max;
                                                   ^
/opt/gcc-10.2.0/lib/gcc/x86_64-pc-linux-gnu/10.2.0/../../../../include/c++/10.2.0/bits/basic_string.h:407:51: error: no member named "__min" in "__gnu_cxx::__numeric_traits<int>" [clang-diagnostic-error]
        else if (__d < __gnu_cxx::__numeric_traits<int>::__min)
                                                         ^
/opt/gcc-10.2.0/lib/gcc/x86_64-pc-linux-gnu/10.2.0/../../../../include/c++/10.2.0/bits/basic_string.h:408:45: error: no member named "__min" in "__gnu_cxx::__numeric_traits<int>" [clang-diagnostic-error]
          return __gnu_cxx::__numeric_traits<int>::__min;
                                                   ^
/opt/gcc-10.2.0/lib/gcc/x86_64-pc-linux-gnu/10.2.0/../../../../include/c++/10.2.0/bits/stl_bvector.h:891:50: error: no member named "__max" in "__gnu_cxx::__numeric_traits<long>" [clang-diagnostic-error]
          __gnu_cxx::__numeric_traits<difference_type>::__max
                                                        ^
/opt/gcc-10.2.0/lib/gcc/x86_64-pc-linux-gnu/10.2.0/../../../../include/c++/10.2.0/bits/stl_deque.h:1833:67: error: no member named "__max" in "__gnu_cxx::__numeric_traits<long>" [clang-diagnostic-error]
        const size_t __diffmax = __gnu_cxx::__numeric_traits<ptrdiff_t>::__max;
                                                                         ^
/opt/gcc-10.2.0/lib/gcc/x86_64-pc-linux-gnu/10.2.0/../../../../include/c++/10.2.0/bits/stl_vector.h:1782:46: error: no member named "__max" in "__gnu_cxx::__numeric_traits<long>" [clang-diagnostic-error]
          = __gnu_cxx::__numeric_traits<ptrdiff_t>::__max / sizeof(_Tp);
                                                    ^
/opt/gcc-10.2.0/lib/gcc/x86_64-pc-linux-gnu/10.2.0/../../../../include/c++/10.2.0/ext/string_conversions.h:75:50: error: no member named "__min" in "__gnu_cxx::__numeric_traits<int>" [clang-diagnostic-error]
            return __val < _TRet(__numeric_traits<int>::__min)
                                                        ^
/opt/gcc-10.2.0/lib/gcc/x86_64-pc-linux-gnu/10.2.0/../../../../include/c++/10.2.0/ext/string_conversions.h:76:48: error: no member named "__max" in "__gnu_cxx::__numeric_traits<int>" [clang-diagnostic-error]
              || __val > _TRet(__numeric_traits<int>::__max);
                                                      ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/17207/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/executor/snooze_time.cc:6:6:
error: no type named "ostream" in namespace "std" [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/17207/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/16169/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
